added new features

--- a/quiz.html
+++ b/quiz.html
@@ -21,6 +21,7 @@
             <div class="question_section">
                 <p id="question"></p>
                 <h2>Question <p id="q_num"></p></h2>
+                <small class="message"></small>
             </div>
             <div class="answer_section" id="answer_section">
                 
